# KODA_BWT

./: BWT.cpp  BWT.h  CMakeLists.txt  README  main.cpp
doc/: CMakeLists.txt  KODA_BWT.Doxyfile.in
doc/tex/: bwt.tex  dane.tex  dc.tex  if.tex  ifc.tex  makefile  mtf.tex  mybib.bib  podsumowanie.tex  report.tex  rle.tex  test_app.tex  wyniki.tex
doc/tex/PICS/: bwt_dane.eps  bwt_dane3.eps
src/: CMakeLists.txt  main.cpp  test.sh
src/bwt/: CMakeLists.txt
src/second_step/: ArthmeticCoder.cpp  ArthmeticCoder.h  CMakeLists.txt  DC.cpp  DC.h  HuffmanCoder.cpp  HuffmanCoder.h  IF.cpp  IF.h  IFC.cpp  IFC.h  MTF.cpp  MTF.h  RLE.cpp  RLE.h  RLE_2.cpp  RLE_2.h  SecondStepAlg.h
src/unit_test/: CMakeLists.txt  IOData.h  UnitTest.cpp  UnitTest.h  main.cpp
